--- a/css/home.css
+++ b/css/home.css
@@ -53,12 +53,12 @@ body{
   display:flex;
   justify-content: space-between;
 }
-.left-list{
+.left-list-top{
   padding-left: 41px;
   padding-top: 40px;
 }
 
-.left-list a{
+.left-list-top a{
   opacity: 0.9;
   font-size: 16px;
   font-weight: 600;
@@ -70,7 +70,7 @@ body{
   color: #ffffff;
   font-family: AvenirNext;
 }
-.left-list a:hover{
+.left-list-top a:hover{
   color: #ffffff;
   cursor: pointer;
   text-decoration:none;
