--- a/css/single-product.css
+++ b/css/single-product.css
@@ -68,12 +68,12 @@
     display:flex;
     justify-content: space-between;
 }
-.left-list{
+.left-list-top{
     padding-left: 41px;
     padding-top: 40px;
 }
 
-.left-list a{
+.left-list-top a{
     opacity: 0.9;
     font-size: 16px;
     font-weight: 600;
@@ -85,7 +85,7 @@
     color: #ffffff;
     font-family: AvenirNext;
 }
-.left-list a:hover{
+.left-list-top a:hover{
     color: #ffffff;
     cursor: pointer;
     text-decoration:none;
