--- a/css/blogarchivepage.css
+++ b/css/blogarchivepage.css
@@ -453,9 +453,15 @@ body{
         background: #54585a;
   }
   
-  .main-area > div.further-row{
+  .main-area div.further-row{
     width: 1275px;
   }
+.main-area a:hover {
+    text-decoration: none;
+}
+.main-area a {
+    text-decoration: none;
+}
   .the-three-dives .aligninng {
     display: flex;
     flex-direction: column;
