--- a/css/menu.css
+++ b/css/menu.css
@@ -174,6 +174,7 @@
 .menu .caption-icons-1 {
     position: absolute;
     right: 0;
+    top: 0;
     border-radius: 6px;
     background-color: #A6192E;
     line-height: 28px;
