--- a/css/teambio.css
+++ b/css/teambio.css
@@ -12,6 +12,12 @@ body{
     background-size: cover;
     height: 807px; }
 
+#hero1 {
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #9f041b, #9f041b), url("../assets/general.jpg") no-repeat center top;
+    background-size: cover;
+    height: 807px; }
+
 .hero-row-1 {
     display: flex;
     flex-direction: row;
@@ -423,7 +429,7 @@ hr{
 .customer-support .hoverd-images{
     width: 1291px;
     margin: 0 auto;
-    padding: 0 0 200px 55px;
+    padding: 50px 0 200px 55px;
 }
 
 
@@ -462,7 +468,7 @@ hr{
 .qoutation .qoutation-inside .qoutation-inside-qoute p{
     transform: rotate(-360deg);
     font-family: AvenirNext;
-    font-size: 61px;
+    font-size: 55px;
     font-weight: 100;
     font-style: normal;
     font-stretch: normal;
@@ -472,6 +478,9 @@ hr{
     color: #c7c9c7;
     width: 1200px;
     padding-bottom: 60px;
+}
+.second-subscribe hr{
+    border: .5px solid #a0a0a0!important;
 }
 .qoutation .qoutation-inside .qoutation-owner{
     display: flex;
