Work in progress

--- a/css/publicationarchive.css
+++ b/css/publicationarchive.css
@@ -69,7 +69,9 @@ body{
   line-height: 30px;
 }
 .menumain{
-  position: relative;
+  position: fixed;
+  right: 31px;
+  z-index: 1;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
