--- a/css/academylandingpage.css
+++ b/css/academylandingpage.css
@@ -303,18 +303,21 @@ body{
 }
 
 /****************************************** two div section ********************************************/
-
+.the-three-dives .row-flex{
+ display:flex;
+}
 .the-three-dives {
-    background: #54585a;
+    background: #a6192e;
 }
 .main-area {
-    max-width: 1319px;
+    max-width: 1349px;
     margin: 0 auto;
 }
 
 .two-div1 {
-    padding: 52px 78px 115px 73px;
+    padding: 52px 78px 63px 79px;
     background:#a6192e;
+    width:449px;
 }
 .two-div1 p{
     margin-bottom:0px;
@@ -330,11 +333,16 @@ body{
     flex-direction: column;
     padding-top: 100px;
     padding-left: 35px;
-    width:899px;
+    width:900px;
 }
-.the-three-dives .col1 p a {
+.the-three-dives .col1 ul{
+    list-style-type: none;
+    padding:0px;
+    padding-top: 10px;
+}
+.the-three-dives .col1 ul li a{
     font-family: AvenirNext;
-    font-size: 28px;
+    font-size: 26px;
     font-weight: bold;
     font-style: normal;
     font-stretch: normal;
@@ -343,10 +351,23 @@ body{
     text-align: left;
     color: #f26b7f;
     text-decoration: none!important;
+    letter-spacing: 1.1px;
+    cursor: pointer;
 }
-.the-three-dives .col1 a:hover{
-    text-decoration:none;
+.the-three-dives .col1 ul li a:hover{
+    font-family: AvenirNext;
+    font-size: 26px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #f26b7f;
+    text-decoration: none!important;
+    letter-spacing: 1.1px;
 }
+
 .white-color {
     color: #ffffff !important;
 }
@@ -473,7 +494,7 @@ body{
     background: #54585A;
 }
 .slider-area .course-container .course-text {
-    width: 447px;
+    width: 460px;
     height: 38px;
     font-family: AvenirNext;
     font-size: 28px;
@@ -720,7 +741,7 @@ body{
     margin:0 auto;
 }
 .live-education .course-container .course-text{
-    width: 447px;
+    width: 485px;
     height: 38px;
     font-family: AvenirNext;
     font-size: 28px;
@@ -1214,7 +1235,6 @@ border-bottom: 1px solid #e9e9e9;
   font-stretch: normal;
   line-height: 1.75;
   letter-spacing: -0.1px;
-  text-align: ;
   color: #939393;
   padding-left: 272px;
 }
@@ -1226,7 +1246,6 @@ border-bottom: 1px solid #e9e9e9;
   font-stretch: normal;
   line-height: 1.75;
   letter-spacing: -0.1px;
-  text-align: ;
   color: #939393;
 }
 
@@ -1472,45 +1491,189 @@ border-bottom: 1px solid #e9e9e9;
 
 /*****************************Academy Bussniess pages start ***********************/
 .business-page-bg{
-    background:#a6192e;
-}
-.main-area-business{
-    max-width: 1349px;
-    margin: 0 auto;
-}
-.secondnav-business{
-    position:relative;
-    top:-45px;
-}
-.secondnav-business h2{
-    letter-spacing: 30px;
-}
-.white-color{
-   color:#ffffff;
-}
-.business-page{
-    padding: 52px 78px 115px 73px;
     background: #a6192e;
 }
-.main-area-business .col5{
+.business-page-bg .container-text .two-div-1 a{
+ font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #9d9d9d;
+}
+.business-page-bg .container-text .two-div-1 a:hover{
+    text-decoration: none;
+}
+.business-page-bg .business-list{
+    padding: 32px 78px 63px 74px;
+}
+.business-page-bg .div-right{
+    display: flex;
+    flex-direction: column;
+    padding-top: 75px;
+    padding-left: 35px;
+    width: 900px;
     background-blend-mode: normal, multiply;
-    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/SmilingwithDogSmall.jpg) no-repeat;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/lady-with-her-dog.jpg) no-repeat;
     background-size: 100%;
-    height: 391px
+    height: 391px;
 }
 
-.row-primary{
-    display:flex;
+/*********************** section card************************/
+#business-header{
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/girldoctor.jpg) no-repeat;
+    background-size: 100%;
+    height: 815px;
+}
+
+
+.Business-h-footer {
+    position: relative;
+    top:-99px;
+}
+.Business-h-footer h2{
+    letter-spacing: 33px;
+    padding-right:41px;
+    font-size:34px;
+}
+.Business-h-footer p{
+   padding-top:40px;
+   padding-right:71px;
+}
+.live-education .course-container .course-text .red-text-live{
+    color:red;
+    padding-right:18px;
+}
+.live-education .course-container .course-text .p-text{
+    padding-top:8px;
+    font-size:27px;
+}
+.business-arrow{
+    margin-top:10px;
+}
+.slider-area .footer-p {
+    padding-top:40px;
+}
+.slider-area .footer-p span{
+    color:red;
+    padding-right:18px;
+}
+.slider-area .video-header{
+   height:114px;
+}
+.slider-area .arrow-secondry{
+  margin-top:44px;
+
+}
+/********************** Next section start *****************/
+.top-resource .business-download {
+    padding-top:24px;
+}
+.top-resource .business-download .text-b{
+   color:red;
+   padding-right:29px;
+}
+.top-resource .business-download .download-text{
+   color:#54585a;
+}
+
+/****************************  PAIN MANAGMENT PAGE START ********************/
+
+#painmanagement{
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/girldoctor.jpg) no-repeat;
+    background-size: 100%;
+    height: 815px;
+
+}
+.business-page-bg .img-right-pain{
+    display: flex;
+    flex-direction: column;
+    padding-top: 88px;
+    padding-left: 35px;
+    width: 900px;
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/lickingfaces.jpg) no-repeat;
+    background-size: 100%;
+    height: 391px;
+
+}
+.pain-div{
+    padding: 53px 78px 63px 74px;
+}
+.the-three-dives .col1  .pain-list{
+    padding-top:0px;
+}
+.live-education .course-container .p-live{
+    width:490px;
+}
+.live-education .course-container .p-live span{
+ color:red;
+ padding-right:29px;
+ 
 }
 
 
 
+/*********************** wellness page start     **********************/
 
+#wellness{
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/smilingdog.jpg) no-repeat;
+    background-size: 100%;
+    height: 815px;
 
+}
+.business-page-bg .img-wellness{
+    display: flex;
+    flex-direction: column;
+    padding-top: 82px;
+    padding-left: 38px;
+    width: 900px;
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1), linear-gradient(rgba(84, 88, 90, 0.3), rgba(84, 88, 90, 0.3)), linear-gradient(rgba(84, 88, 90, 0.21), rgba(84, 88, 90, 0.21)), url(../assets/emergingtrendsgerms.jpg) no-repeat;
+    background-size: 100%;
+    height: 391px;
 
+}
+.the-three-dives .col1  .willness-list{
+    padding-top:0px;
+}
+/********************* minimallyinvasive page start ******************/
+#minimally{
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
+    background-size: 100%;
+    height: 815px;
+}
+.the-three-dives .minimally-img{
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url(../assets/diagnosor.png) no-repeat;
+    background-size: 100%;
+    height: 391px;
+}
 
-
-
-
-
-
+.live-education .course-container .minimally-text span {
+    color: red;
+    padding-right: 29px;
+}
+/********************************** emargingtrends page start *********************/
+#emerging{
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
+    background-size: 100%;
+    height: 815px;
+}
+.business-page-bg .emerging-img{
+    display: flex;
+    flex-direction: column;
+    padding-top: 82px;
+    padding-left: 38px;
+    width: 900px;
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1), linear-gradient(rgba(84, 88, 90, 0.3), rgba(84, 88, 90, 0.3)), linear-gradient(rgba(84, 88, 90, 0.21), rgba(84, 88, 90, 0.21)), url(../assets/emergingtrendsgerms.jpg) no-repeat;
+    background-size: 100%;
+    height: 391px;
+}
