--- a/css/jobs.css
+++ b/css/jobs.css
@@ -4,17 +4,14 @@ body{
     margin: 0;
     font-family: AvenirNext!important;
 }
+.custom-row{
+    display: flex;
+}
 
-
+/***************************************main header*************************************/
 #hero {
     background-blend-mode: normal, multiply;
-    background: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #9f041b, #9f041b), url("../assets/dog-with-man-sitting.jpg") no-repeat center top;
-    background-size: cover;
-    height: 807px; }
-
-#hero1 {
-    background-blend-mode: normal, multiply;
-    background: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #9f041b, #9f041b), url("../assets/general.jpg") no-repeat center top;
+    background: linear-gradient(rgba(166, 25, 46, 0.32), rgba(166, 25, 46, 0.32)), linear-gradient(to bottom, #9f041b, #9f041b), url(../assets/catlovetohuman.jpg) no-repeat center top;
     background-size: cover;
     height: 807px; }
 
@@ -98,13 +95,14 @@ body{
 }
 .headerlogo1 {
     padding-top: 54px;
-    margin-right: -23px;
+
     opacity: 0.6;
     font-family: AvenirNext;
     font-size: 41px;
     line-height: 0.8;
     letter-spacing: 44px;
     color: #ffffff;
+    margin-right: -7px;
 }
 
 .logoheader {
@@ -188,7 +186,7 @@ custom-row{
     display: flex;
 }
 
-
+/*****************menu div*****************************/
 .menudiv {
     background-color: #fc0606;
     height: 57px;
@@ -259,16 +257,16 @@ custom-row{
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin:0 auto; }
+}
 .article-container{
     width: 1349px;
-    height: auto;
+    height:  2638px;
     background-color: #54585a;
     margin:0 auto;
     padding-top: 20px;
 }
 
-.back-to-previous i {
+.article-area .back-to-previous i {
     height: 39px;
     width: 39px;
     border-radius: 50%;
@@ -280,14 +278,9 @@ custom-row{
     align-items: center;
     color: white;
     cursor: pointer;
-    padding-right: 3px; }
-
-.article-area strong {
-    cursor: pointer;
-    letter-spacing: 1.3px;
+    padding-right: 3px;
 }
-
-.back-to-previous p{
+.article-area .back-to-previous p{
     display: flex;
     font-family: AvenirNext;
     flex-direction: row;
@@ -298,256 +291,301 @@ custom-row{
     padding-left: 60px;
 }
 .article-area .back-to-previous {
-    margin-top: 74px;
+    margin-top: 62px;
 }
-.customer-support-one{
-    background-color: #54585a;
+.article-area .after-previous-text{
+    padding-left: 108px;
+    padding-right: 109px;
+    padding-top: 59px;
+    margin-bottom: 100px;
 }
-.customer-support{
-    background-color: #54585a;
-    width: 1349px;
-    height: 100%;
-    margin: 0 auto;
-}
-.customer-support .top-content{
-    margin-left: 89px;
-    margin-top: 100px;
-}
-.customer-support .top-content h1{
+.article-area .after-previous-text p{
     font-family: AvenirNext;
-    font-size: 39px;
+    font-size: 21px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
+    line-height: 2;
+    letter-spacing: -0.1px;
     text-align: left;
-    color: #ffffff;
+    color: #c7c9c7;
+    margin-bottom: 0px;
+
 }
-.customer-support .outer-container{
-    position: relative;
-}
-.customer-support .outer-container:nth-child(4){
-    position: relative;
-    width: 367px;
-    height: 346px;
-    display: inline;
-    margin-left: 85px;
-}
-.row-area{
+.article-area .second-div {
+
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    height: 400px;
 }
-.customer-support .hovering-area{
-    width: 367px;
-    height: 346px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: 10px;
-     display: none;
-    background-image: url(../assets/dpimage.png);
+.article-area  .bg-one{
+    background-color: #79091a;
 }
-.customer-support .outer-container:hover .hovering-area{
-    display: inline;
-    opacity:1;
-}
-.customer-support .outer-container:hover {
-    display: inline;
-    opacity:1!important;
+.article-area  .bg-two{
+    background-color: #333333;
 }
 
-hr{
-    margin-top: 20px!important;
-    margin-bottom: 20px!important;
-    border: 0!important;
-    border-top: 1px solid black!important;
-}
-.customer-support .hoverd-images img:hover{
-    opacity: 1;
-}
-.customer-support .hoverd-images img{
-    margin: 10px;
-    opacity: 0.4;
-}
-.hovering-area hr{
-    margin-top: 15px!important;
-    margin-bottom: 15px!important;
-    border: 0!important;
-    border-top: 1px solid black!important;
-    width: 300px;
 
+
+.article-area .second-div .row-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
-.customer-support .hovering-area p:first-child{
-    width: 305px;
-    height: 27px;
+
+.article-area .second-div .row-1 .row-1-p {
+    color: #fa0707;
     font-family: AvenirNext;
+    font-size: 17px;
+    font-weight: bolder;
+}
+
+.article-area .second-div .row-1 .row-2-p {
+    font-size: 61px;
+    color: #ffffff;
+    font-family: AvenirNext;
+    margin-bottom: -2px;
+}
+
+.article-area .second-div .row-1 .row-1-p .row-1-span {
+    font-family: AvenirNext;
+    color: #ffffff;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 26px;
+}
+
+.article-area .second-div .row-2 {
+    display: flex;
+    flex-direction: column;
+    padding-top: 48px;
+}
+
+.article-area .second-div .row-2 p {
+    font-family: AvenirNext;
+    color: #ffffff;
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.article-area .second-div .row-3 {
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.article-area .second-div .row-3 p {
+    font-family: AvenirNext;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: 17px;
+    opacity: 0.8;
+}
+
+.article-area .second-div .learn-more {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 112px;
+    padding-right: 48px;
+}
+
+.article-area .second-div .learn-more-p {
+    color: #ffffff !important;
+    padding-right: 4.5%;
+    line-height: 38px;
+    font-family: AvenirNext !important;
+    font-weight: 300 !important;
+    font-size: 12px !important;
+    padding-bottom: 6px;
+    width: 135px;
+}
+
+.article-area .second-div .learn-more div {
+    height: 46px;
+    width: 46px;
+    border-radius: 50%;
     font-size: 20px;
+    background-color: #fc0606;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-bottom: 10px;
+    padding-top: 2px;
+    padding-left: 3px;
+}
+.article-area .col-three {
+    width: 435px;
+}
+.article-area .flex-end{
+    justify-content: flex-end;
+    margin-top: 70px;
+}
+.article-area .icons-text-div{
+    width: 830px;
+    background-color: #3f4446;
+    height: 400px;
+}
+.article-area .icons-row{
+    justify-content: flex-end;
+    padding-right: 91px;
+    height: 90px;
+}
+.article-area .icons-row-inner{
+    display: flex;
+}
+.article-area .share-text{
+    width: 92px;
+    align-items: center;
+    display: flex;
+}
+.article-area .share-text p {
+    font-family: AvenirNext;
+    font-size: 12px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: 0.2px;
+    text-align: left;
+    color: #c7c9c7;
+    margin-bottom: 0px;
+}
+.article-area .heart-text{
+    width: 106px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.article-area .heart-text i{
+    font-size: 18px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
+    line-height: 1.31;
+    letter-spacing: 0.2px;
     text-align: left;
-    color: #ffffff;
-    margin-top: 176px;
-    padding-left: 34px;
+    color: #c7c9c7;
+    margin-bottom: 0px;
+    margin-right: 5px;
 }
-.customer-support .hovering-area p.second-paragraph{
-    width: 310px;
-    height: 34px;
-    font-family: AvenirNext;
+.article-area .heart-text p {
     font-size: 16px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.63;
-    letter-spacing: normal;
+    line-height: 1.31;
+    letter-spacing: 0.2px;
     text-align: left;
-    color: #fc0606;
-    padding-left: 34px;
+    color: #c7c9c7;
+    margin-bottom: 0px;
 }
-.customer-support .hovering-area p:last-child{
-    width: 341px;
-    height: 34px;
+.article-area .comment-text{
+    width: 67px;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 2px;
-    padding-top: 29px;
+    align-items: center;
 
 }
-
-
-.customer-support .hovering-area p:last-child  i{
-    width: 7.4px;
-    height: 14px;
-    color: white;
-}
-
-.customer-support .hoverd-images{
-    width: 1291px;
-    margin: 0 auto;
-    padding: 50px 0 200px 55px;
-}
-
-
-.customer-support .top-content p{
-    font-family: AvenirNext;
-    font-size: 24px;
+.article-area .comment-text i{
+    font-size: 18px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #fc0606;
-}
-
-/*===== Customer support team - End =====*/
-
-
-/*===== Quotation - Start =====*/
-.qoutation{
-    background-color: #4B4A4C;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
-.qoutation .qoutation-inside{
-    width: 1349px;
-    margin: 0 auto;
-}
-.qoutation .qoutation-inside .qoutation-inside-qoute{
-    display: flex;
-    justify-content: center;
-    padding-top: 96px;
-}
-.qoutation .qoutation-inside .qoutation-inside-qoute p{
-    transform: rotate(-360deg);
-    font-family: AvenirNext;
-    font-size: 55px;
-    font-weight: 100;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.13;
-    letter-spacing: -1.1px;
+    line-height: 1.31;
+    letter-spacing: 0.2px;
     text-align: left;
     color: #c7c9c7;
-    width: 1200px;
-    padding-bottom: 60px;
+    margin-bottom: 0px;
+    margin-right: 5px;
+
 }
-.second-subscribe hr{
-    border: .5px solid #a0a0a0!important;
-}
-.qoutation .qoutation-inside .qoutation-owner{
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 124px;
-}
-.qoutation .qoutation-inside .qoutation-owner p{
-    font-family: AvenirNext;
-    font-size: 27px;
-    font-weight: 900;
+.article-area .comment-text p {
+    font-size: 16px;
+    font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.21;
-    letter-spacing: -0.6px;
+    line-height: 1.31;
+    letter-spacing: 0.2px;
     text-align: left;
-    color: #54585a;
+    color: #c7c9c7;
+    margin-bottom: 0px;
 }
-.qoutation .qoutation-inside .qoutation-owner p span{
-    color: #fc0606;
+.article-area .simple-text{
+    width: 76px;
+    display: flex;
+    align-items: center;
 }
-/*===== Quotation - End =====*/
+.article-area .simple-text p{
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.31;
+    letter-spacing: 0.2px;
+    text-align: left;
+    color: #c7c9c7;
+    margin-bottom: 0px;
+}
+.article-area .big-text{
+    padding-left: 62px;
+    height: 264px;
+}
+.article-area .big-text p{
+    font-family: AvenirNext;
+    font-size: 15px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: -0.1px;
+    text-align: left;
+    color: #939393;
+    margin-bottom: 0px;
+    height:264px;
+}
 
 
 
 
+/**********************************article area*************************/
 
+/********************************  *****************/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/******************************** footer start *****************/
 
 /* subsribe start */
+
 .subscribe-container{
-    background: #4B4A4C;
+
+    background-color: #f7f7f7;
+    padding-top:70px;
 }
-.subscribe-container .main{
+.main{
     width: 1349px;
     margin:0 auto;
+    background-color: #f7f7f7;
 }
 .subscribing-area{
     display: flex;
     justify-content: flex-end;
+    height: 650px;
     width: 1349px;
+    background-color: #f7f7f7;
     margin:0 auto;
+
 }
 .sub{
+
     width: 1215px;
     height: 409px;
     background-color: rgba(155, 155, 155, 0.06);
-    margin-top: 106px;
+    margin-top: 159px;
     margin-bottom: 81px
 }
 /* subscribe */
@@ -616,21 +654,22 @@ hr{
 
 
 }
-
-.hr {
-    margin-top: 30px;
-    margin-bottom: 20px;
-    border: 0;
-    border-top: 1px solid #939393;
+.second-subscribe hr{
+    border: solid 1px #d1d1d6;
+    margin-top: 6px;
 }
 
 /* subsribe end */
-/* footer area start */
+/* footer area star */
+
 .footer-container{
-    background-color: #504F51;
+
+    background-color: rgb(239, 238, 238);
+
 }
 .foot-area{
     width: 1349px;
+    background-color:rgb(239, 238, 238);
     margin:0 auto;
 }
 .footer-area{
@@ -761,3 +800,18 @@ hr{
     color: #fc0606;
 }
 /* footer area end */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
