--- a/css/home.css
+++ b/css/home.css
@@ -70,7 +70,8 @@ body{
   line-height: 30px;
 }
 .menumain{
-  position: relative;
+  position: fixed;
+  right: 30px;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -114,6 +115,7 @@ body{
 .container-2{
   display:flex;
   justify-content: space-between;
+  padding-bottom: 95px;
 }
 .left-list-top{
   padding-left: 41px;
@@ -146,7 +148,6 @@ body{
   padding-bottom: 15px;
   margin-top: 16px;
   margin-right: -3px;
-  position: relative;
 }
 .icons{
   padding-top: 5px;
