--- a/css/education.css
+++ b/css/education.css
@@ -71,7 +71,9 @@ body{
     line-height: 30px;
 }
 .menumain{
-    position: relative;
+    position: fixed;
+    right: 30px;
+    z-index: 1;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -115,6 +117,7 @@ body{
 .container-2{
     display:flex;
     justify-content: space-between;
+    padding-bottom: 95px;
 }
 .left-list-top{
     padding-left: 41px;
@@ -147,7 +150,7 @@ body{
     padding-bottom: 15px;
     margin-top: 16px;
     margin-right: -3px;
-    position: relative;
+
 }
 .icons{
     padding-top: 5px;
