--- a/css/home.css
+++ b/css/home.css
@@ -72,6 +72,7 @@ body{
 .menumain{
   position: fixed;
   right: 30px;
+  z-index: 1;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
