--- a/css/liveeducation.css
+++ b/css/liveeducation.css
@@ -88,7 +88,9 @@ body{
   line-height: 30px;
 }
 .menumain{
-  position: relative;
+  position: fixed;
+  right: 30px;
+  z-index: 1;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -131,6 +133,7 @@ body{
 .hero-one .container-2{
   display:flex;
   justify-content: space-between;
+  padding-bottom: 95px;
 }
 .hero-one .container-2 .left-list-top{
   padding-left: 41px;
@@ -167,7 +170,7 @@ body{
   padding-bottom: 15px;
   margin-top: 16px;
   margin-right: 5px;
-  position: relative;
+
   height: 228px;
 }
 
