--- a/css/resourcearchive.css
+++ b/css/resourcearchive.css
@@ -75,7 +75,9 @@ body{
     line-height: 30px;
 }
 .menumain{
-    position: relative;
+    position: fixed;
+    right:30px;
+    z-index: 1;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -115,6 +117,7 @@ body{
 .container-2{
     display:flex;
     justify-content: space-between;
+    padding-bottom: 95px;
 }
 .left-list-top{
     padding-left: 41px;
