--- a/css/single-product.css
+++ b/css/single-product.css
@@ -71,7 +71,9 @@
     line-height: 30px;
 }
 .menumain{
-    position: relative;
+    position: fixed;
+    right:30px;
+    z-index: 100;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -129,6 +131,7 @@
 .container-2{
     display:flex;
     justify-content: space-between;
+    padding-bottom: 95px;
 }
 .left-list-top{
     padding-left: 41px;
