--- a/css/supportlandingpage.css
+++ b/css/supportlandingpage.css
@@ -76,7 +76,9 @@ p{
     line-height: 30px;
 }
 .menumain{
-    position: relative;
+    position: fixed;
+    right:30px;
+    z-index: 100;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -134,6 +136,7 @@ p{
 .container-2{
     display:flex;
     justify-content: space-between;
+    padding-bottom: 95px;
 }
 .left-list-top{
     padding-left: 41px;
