--- a/css/academylandingpage.css
+++ b/css/academylandingpage.css
@@ -71,7 +71,7 @@ body{
 .menumain{
     position: fixed;
     right: 30px;
-    z-index: 1;
+    z-index: 4;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*Menu end*/
@@ -401,30 +401,26 @@ body{
 /******************************* two section end ******************/
 /******************************* slider area ******************/
 /*  slider-area */
-
+.slider-area-section{
+    height: 293px;
+    background: #54585A;
+    margin-bottom: 223px;
+}
 .slider-area{
-  width: 1349px;
-  height: 516px;
-  margin-top: 34px;
-  margin-bottom: 70px;
-  margin:auto;
+    width: 1349px;
+    margin: 0 auto;
 }
 .slider-area .slider-container{
-  width: 1349px;
-  height: 385px;
-  position: relative;
-
-
+    width: 1349px;
+    height: 385px;
+    position: relative;
+    z-index: 1;
 }
 .slider-area .slider-container .item{
     width: 1349px;
   height: 385px;
   mix-blend-mode: multiply;
   margin:auto;
-}
-.slider-area  .content-vedio{
-    background:#54585A;
-    height:178px;
 }
 .slider-area  .content-vedio .txt-wrapper{
     margin-top:30px;
@@ -463,26 +459,23 @@ body{
     border-radius: 5px;
     width:468px;
     height:323px;
-    position:relative;
-    right:82px;
 }
 .slider-area  .wrapper-two{
     background: linear-gradient(rgba(166, 25, 46, 0.5), rgba(166, 25, 46, 0.5)), linear-gradient(223deg, rgba(166, 25, 46, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/triangles.jpg) no-repeat;
     background-size: 100%;
     border-radius: 5px;
     width:492px;
-    position:relative;
-    right:40px;
     height:323px;
+    margin-left: 33px;
 }
 
 .slider-area  .wrapper-three{
     background: linear-gradient(rgba(166, 25, 46, 0.5), rgba(166, 25, 46, 0.5)), linear-gradient(223deg, rgba(166, 25, 46, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/triangles.jpg) no-repeat;
     background-size: 100%;
     border-radius: 5px;
-    width:407px;
-    height:323px;
-    position: relative;
+    width: 407px;
+    height: 323px;
+    margin-left: 33px;
 }
 .slider-area .txt-header-section{
     background:#54585A;
